# cn-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  WRITEUP_OUTLINE.md  pyproject.toml
.github/workflows/: deploy-dashboard.yml
dashboard/: observablehq.config.js  package-lock.json  package.json
dashboard/src/: about.md  comparison.md  index.md  methodology.md  pool.md  prompts.md
dashboard/tools/: build_bot_json.py  build_candidate_pool_json.py  build_prompts_json.py  refresh.sh
data/: baselines_report.md  baselines_scored.jsonl  candidate_pool_analysis.jsonl  pipeline.jsonl  pipeline_cache.jsonl  pipeline_cached.jsonl  pipeline_cached_scored.jsonl  pipeline_scored.jsonl
docs/: community-notes-pilot.md
scripts/: ab_prompt_eval.py  build_ai_exemplars.py  build_exemplars.py  build_pipeline_cache_expanded.py  build_training_set.py  build_training_set_v2.py  classify_candidate_pool.py  evaluate_baselines.py  evaluate_finetuned.py  evaluate_pipeline.py  evaluate_pipeline_cached.py  finetune_modal.py  finetune_modal_v2.py  measure_cost.py  run-bot.sh  score_baselines.py  score_finetuned.py  score_pipeline.py  score_pipeline_cached.py  serve_finetune_modal.py  serve_finetune_modal_v2.py
src/: data_models.py  exemplars.json  main.py  monitor.py  stats.py  storage.py  web_app.py
src/cnapi/: client.py  evaluate_note.py  get_api_eligible_posts.py  get_notes_written.py  submit_note.py
src/note_writer/: bot_engine.py  config.py  error_check.py  evidence.py  evidence_text.py  fact_check_api.py  finetune_client.py  link_expander.py  llm_util.py  opinion_check.py  (+9 more)
(+5 files in other folders)
